--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@
     margin: 0;
     padding: 0;
 }
+body
+{
+    font-family: sans-serif;
+}
+#nav-bar
+{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+.navbar
+{
+    background-image: linear-gradient(#a517ba, #5f1782);
+    padding: 0 !important;
+}
